// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders with description 1`] = `
<div
  className="rs-panel"
>
  <div
    aria-expanded={false}
    className="rs-panel-header"
    tabIndex={-1}
  >
    <h3
      className="rs-panel-title"
    >
      First forum
    </h3>
  </div>
  <div
    className="rs-panel-body"
    role="region"
  >
    <main
      className="rs-content"
    >
      <p>
        Forum description.
      </p>
      <hr />
    </main>
  </div>
</div>
`;

exports[`Renders with new thread button 1`] = `
<div
  className="rs-panel"
>
  <div
    aria-expanded={false}
    className="rs-panel-header"
    tabIndex={-1}
  >
    <h3
      className="rs-panel-title"
    >
      First forum
    </h3>
  </div>
  <div
    className="rs-panel-body"
    role="region"
  >
    <main
      className="rs-content"
    >
      <p>
        Forum description.
      </p>
      <hr />
      <div
        className="rs-panel-group"
      >
        <a
          href="/forums/1/new"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <button
            className="rs-btn rs-btn-primary"
            type="button"
          >
            New Thread
            <span
              className="rs-ripple-pond"
            >
              <span
                className="rs-ripple"
              />
            </span>
          </button>
        </a>
      </div>
    </main>
  </div>
</div>
`;

exports[`Renders with nothing 1`] = `
<div
  className="rs-panel"
>
  <div
    aria-expanded={false}
    className="rs-panel-header"
    tabIndex={-1}
  >
    <h3
      className="rs-panel-title"
    >
      First forum
    </h3>
  </div>
  <div
    className="rs-panel-body"
    role="region"
  >
    <main
      className="rs-content"
    />
  </div>
</div>
`;
